Docs: add .env setup step to Installation